src/test/ui/consts/const-eval/erroneous-const.stderr
warning: this operation will panic at runtime
  --> $DIR/erroneous-const.rs:6:22
   |
LL |     const VOID: () = [()][2];
   |                      ^^^^^^^ index out of bounds: the length is 1 but the index is 2
   |
note: the lint level is defined here
  --> $DIR/erroneous-const.rs:2:20
   |
LL | #![warn(const_err, unconditional_panic)]
   |                    ^^^^^^^^^^^^^^^^^^^

warning: any use of this value will cause an error
  --> $DIR/erroneous-const.rs:6:22
   |
LL |     const VOID: () = [()][2];
   |     --------------   ^^^^^^^ index out of bounds: the length is 1 but the index is 2
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
note: the lint level is defined here
  --> $DIR/erroneous-const.rs:2:9
   |
LL | #![warn(const_err, unconditional_panic)]
   |         ^^^^^^^^^

error[E0080]: could not evaluate static initializer
  --> $DIR/erroneous-const.rs:15:17
   |
LL |         let _ = PrintName::<T>::VOID;
   |                 ^^^^^^^^^^^^^^^^^^^^
   |                 |
   |                 referenced constant has errors
   |                 inside `no_codegen::<i32>` at $DIR/erroneous-const.rs:15:17
...
LL | pub static FOO: () = no_codegen::<i32>();
   |                      ------------------- inside `FOO` at $DIR/erroneous-const.rs:19:22

error: aborting due to previous error; 2 warnings emitted

For more information about this error, try `rustc --explain E0080`.
Future incompatibility report: Future breakage diagnostic:
warning: any use of this value will cause an error
  --> $DIR/erroneous-const.rs:6:22
   |
LL |     const VOID: () = [()][2];
   |     --------------   ^^^^^^^ index out of bounds: the length is 1 but the index is 2
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
note: the lint level is defined here
  --> $DIR/erroneous-const.rs:2:9
   |
LL | #![warn(const_err, unconditional_panic)]
   |         ^^^^^^^^^

